complete docker setup for each service

--- a/card/build.gradle
+++ b/card/build.gradle
@@ -36,6 +36,9 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
+bootBuildImage {
+	imageName = 'inspiron968/card:s4'
+}
 
 tasks.named('test') {
 	useJUnitPlatform()
