--- a/loans/build.gradle
+++ b/loans/build.gradle
@@ -36,6 +36,10 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
+bootBuildImage {
+	imageName = 'inspiron968/loans:s4'
+}
+
 
 tasks.named('test') {
 	useJUnitPlatform()
