--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -20,6 +20,13 @@ spring:
   sql:
     init:
       mode: always
+  config:
+    import:
+      - "application_qa.yml"
+      - "application_prod.yml"
+  profiles:
+    active:
+      - "prod"
 
 logging:
   level:
@@ -27,3 +34,16 @@ logging:
     org.springframework: INFO
     com.bs.accounts: DEBUG
     org.hibernate.SQL: DEBUG
+
+
+build:
+  version: "3.0"
+
+accounts:
+  message: "Welcome to EazyBank accounts related local APIs "
+  contactDetails:
+    name: "John Doe - Developer"
+    email: "john@eazybank.com"
+  onCallSupport:
+    - (555) 555-1234
+    - (555) 523-1345
