--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -26,3 +26,10 @@ spring:
       mode: always
   config:
     import: optional:configserver:http://localhost:8071/
+
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
