--- a/configserver/src/main/resources/application.yml
+++ b/configserver/src/main/resources/application.yml
@@ -2,12 +2,34 @@ spring:
   application:
     name: "configserver"
   profiles:
-    active: native
+    # active: native
+    active: git
   cloud:
     config:
       server:
-        native:
-          search-location: "classpath:/config"
-
+        # native:
+        # search-locations: "classpath:/config"
+        # search-locations: "file:///Users//eazybytes//Documents//config"
+        git:
+          uri: "https://github.com/Srirambisoyi/McsConfiServer.git"
+          default-label: main
+          timeout: 5
+          clone-on-start: true
+          force-pull: true
+  rabbitmq:
+    host: "localhost"
+    port: 5672
+    username: "guest"
+    password: "guest"
+encrypt:
+  key: "T4g&2h8VqP"
 server:
   port: 8071
+
+
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
