--- a/loans/src/main/resources/application.yml
+++ b/loans/src/main/resources/application.yml
@@ -21,3 +21,15 @@ spring:
   config:
     import: optional:configserver:http://localhost:8071/
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+
+rabbitmq:
+  host: "localhost"
+  port: 5672
+  username: "guest"
+  password: "guest"
+
